@@ -1,7 +1,5 @@
-6,8c6,7
+5,6c5
 <     <listen port="9004"/>
 <     <proxy host="localhost:80"/>
-<     <settings src="../etc/settings"/>
 ---
 >     <listen port="8004"/>
->     <settings src="/etc/pazpar2/settings/edu.xml"/>
